--- a/package.json
+++ b/package.json
@@ -5,15 +5,23 @@
   "main": "lib",
   "types": "lib",
   "scripts": {
+    "gen": "ts-node src/index.ts",
     "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "typescript": "^4.3.4"
+    "@types/glob": "^7.1.3",
+    "@types/yargs": "^17.0.0",
+    "adhespec-typescript-interface": "^0.1.0",
+    "fp-chainer": "^0.1.0",
+    "glob": "^7.1.7",
+    "typescript": "^4.3.4",
+    "yargs": "^17.0.1"
   },
   "devDependencies": {
-    "@types/node": "^15.12.4"
+    "@types/node": "^15.12.4",
+    "ts-node": "^10.0.0"
   }
 }
