--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adhespec-typescript-client",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "",
   "main": "./lib/index.js",
   "types": "./lib",
@@ -9,7 +9,7 @@
     "build": "tsc"
   },
   "bin": {
-    "gen": "./bin/index.js"
+    "adhespec-ts": "./bin/index.js"
   },
   "keywords": [],
   "author": "",
